# asmjit

./: .appveyor.yml  .travis.yml  BREAKING.md  CMakeLists.txt  CxxProject.cmake  README.md
src/asmjit/: apibegin.h  asmjit.h  asmjit_build.h  base.h  build.h  host.h  x86.h
src/asmjit/base/: archinfo.cpp  archinfo.h  asmbuilder.cpp  asmbuilder.h  assembler.cpp  assembler.h  bitutils.h  codebuilder.cpp  codebuilder.h  codecompiler.cpp  codecompiler.h  codeemitter.cpp  codeemitter.h  codegen.cpp  codegen.h  codeholder.cpp  codeholder.h  compiler.cpp  compiler.h  compilercontext.cpp  compilercontext_p.h  constpool.cpp  constpool.h  containers.cpp  containers.h  cpuinfo.cpp  cpuinfo.h  func.cpp  func.h  globals.cpp  globals.h  logging.cpp  logging.h  operand.cpp  operand.h  osutils.cpp  osutils.h  regalloc.cpp  regalloc_p.h  runtime.cpp  (+16 more)
src/asmjit/x86/: x86assembler.cpp  x86assembler.h  x86compiler.cpp  x86compiler.h  x86compilercontext.cpp  x86compilercontext_p.h  x86emitter.h  x86func.cpp  x86func.h  x86func_p.h  x86inst.cpp  x86inst.cpp.backup  x86inst.h  x86internal.cpp  x86logging.cpp  x86logging.h  x86misc.h  x86operand.cpp  x86operand.h  x86operand_regs.cpp  x86regalloc.cpp  x86regalloc_p.h
src/test/: asmjit_bench_x86.cpp  asmjit_test_opcode.cpp  asmjit_test_opcode.h  asmjit_test_unit.cpp  asmjit_test_x86.cpp  genblend.h
test/: asmjit_test_opcode.h  asmjit_test_unit.cpp  asmjit_test_x86_asm.cpp  asmjit_test_x86_cc.cpp
tools/: generate-x86.js
